# RustBackendTemplate

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: deploy.yml  lint.yml  test.yml
doc/: CLI.md
docker/deploy/: Dockerfile
migrations/2023-09-08-082957_create_users/: up.sql
migrations/2023-09-08-083414_create_roles/: up.sql
migrations/2024-07-17-111606_add_confirmed_field_to_users/: down.sql  up.sql
migrations/2024-08-21-070334_modify_users/: down.sql  up.sql
migrations/2024-08-21-071324_create_companies/: up.sql
migrations/2024-08-21-075955_create_user_company_roles/: down.sql  up.sql
migrations/2024-08-21-081454_modify_user_roles/: down.sql  up.sql
src/: auth.rs  commands.rs  dto.rs  errors.rs  lib.rs  mail.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: authorization.rs  mod.rs  profile.rs
templates/email/: confirmation.html  reset_password.html
templates/page/: confirmation.html.tera
tests/: authorization.rs  profile.rs
tests/common/: mod.rs
