[package]
name = "rust_template"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = [
    "diesel_postgres_pool",
] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["deadpool_redis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "4.4.3"
argon2 = "0.5"
rand = "0.8"
log = "0.4"
tera = "1.19"
lettre = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
utoipa = { version = "4.0", features = ["rocket_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "4.0", features = ["rocket"] }
