[package]
name = "rust_template"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = [
    "diesel_postgres_pool",
] }
rocket_db_pools = { version = "0.1.0", features = ["deadpool_redis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.4.3"
argon2 = "0.5"
rand = "0.8"
log = "0.4"
tera = "1.19"
lettre = "0.11"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
utoipa = { version = "4.0", features = ["rocket_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "4.0", features = ["rocket"] }
rustix = "0.38.20"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
